Fix overflow of text in profiles

--- a/plugins/reAdjust/design/readjust.css
+++ b/plugins/reAdjust/design/readjust.css
@@ -132,6 +132,11 @@
     content: "\f046";
 }
 
-div.credits.well {
-    display: none !important;
+/* Fix overflow of text in profiles
+ ==============================================================================
+ */
+.Box.About dl dd {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
